Removed unwanted sample images

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ models/__pycache__/*
 models/engine/__pycache__/*
 tests/__pycache__/*
 tests/test_models/__pycache__/*
+web_static/images/sample_images/*
